[package]
name = "dev-security"
version = "0.9.1"
edition = "2021"
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Dependency audit and license policy for Rust. Wraps cargo-audit + cargo-deny: known-CVE scanning, license enforcement, banned-crate policies. Part of the dev-* verification collection."

keywords = [
    "security",
    "audit",
    "cve",
    "license",
    "rustsec"
]

categories = [
    "development-tools",
    "development-tools::testing",
    "development-tools::debugging"
]

documentation = "https://docs.rs/dev-security"
repository = "https://github.com/jamesgober/dev-security"
homepage = "https://github.com/jamesgober/dev-security"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dev-report = { version = "0.9", path = "../dev-report" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[features]
default = []

[profile.release]
opt-level = 3
lto = "thin"
